--- a/lib/app_web/templates/home/index.html.eex
+++ b/lib/app_web/templates/home/index.html.eex
@@ -1,7 +1,7 @@
 <div class="">
   <section class="max-w-4xl pt-16 mx-auto text-center md:pt-20">
     <div class="px-6 md:px-8">
-      <h1 class="mb-6 text-4xl font-bold leading-10 tracking-tight text-gray-800 md:font-extrabold md:mb-5 md:text-5xl">Curated collections of learning resources</h1>
+      <h1 class="mb-6 text-4xl font-bold leading-10 tracking-tight text-gray-900 md:font-extrabold md:mb-5 md:text-5xl">Curated collections of learning resources</h1>
       <p class="text-lg leading-7 text-gray-900 md:text-xl">Explore them all...</p>
     </div>
   </section>
@@ -9,7 +9,7 @@
   <section class="mt-10">
     <div class="flex justify-start pt-1 pb-3 pl-6 space-x-4 overflow-x-scroll text-gray-900 md:gap-6 md:grid md:justify-center md:max-w-4xl md:mx-auto md:grid-cols-repeat-48 md:pl-0 after:empty-content md-after-none after:pr-6 md:after:pr-0 no-scrollbar md:space-x-0">
       <%= for skill <- @skills do %>
-        <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-md h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400 group" do %>
+        <%= link to: Routes.live_path(@conn, AppWeb.SkillLive, skill.slug), class: "min-w-max flex flex-col items-center justify-end p-4 shadow rounded-lg h-60 bg-white focus:outline-none focus:ring-2 focus:ring-offset-light-blue-50 ring-offset-2 focus:ring-light-blue-400 group" do %>
           <div class="flex w-32 overflow-hidden transition duration-500 ease-in-out transform group-hover:scale-105 md:w-40">
             <%= render SkillView, "_item_logo.html", item: skill, width: 160, height: 160 %>
           </div>
