--- a/lib/app_web/templates/skill/item_component.html.leex
+++ b/lib/app_web/templates/skill/item_component.html.leex
@@ -1,5 +1,6 @@
-<div id="<%= 'item-#{@item.id}' %>">
-  <%= link to: Routes.item_path(@socket, :show, @item.slug), class: "flex items-center px-4 py-5 space-x-4 bg-white rounded-md shadow sm:rounded-lg sm:space-x-6 sm:px-6 hover:bg-blue-gray-50 group" do %>
+<div id="<%= 'item-#{@item.id}' %>" class="relative group">
+  <%= link "", to: Routes.item_path(@socket, :show, @item.slug), class: "absolute inset-0", 'phx-click': "show_item", 'phx-target': @myself %>
+  <div class="flex items-center px-4 py-5 space-x-4 bg-white rounded-md shadow cursor-pointer sm:rounded-lg sm:space-x-6 sm:px-6">
     <div class="flex-none w-16 sm:w-20">
       <%= render "_item_logo.html", item: @item, width: 80, height: 80 %>
     </div>
@@ -7,9 +8,9 @@
     <div class="self-start flex-1">
       <div class="flex items-center">
         <h2 class="pt-1 text-lg font-semibold leading-6 text-gray-900 sm:leading-7"><%= @item.name %></h2>
-        <span
+        <a
           href="/r/<%= @item.slug %>/away"
-          class="hidden ml-1 -mt-2 text-gray-500 opacity-0 sm:inline-block hover:text-gray-900 group-hover:opacity-100"
+          class="z-10 hidden ml-1 -mt-2 text-gray-500 opacity-0 sm:inline-block hover:text-gray-900 group-hover:opacity-100"
           rel="noopener"
           target="_blank"
         >
@@ -18,7 +19,7 @@
             <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
             <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
           </svg>
-        </span>
+        </a>
       </div>
 
       <div class="prose-sm text-gray-500 truncate-2-lines"><%= raw(@item.summary) %></div>
@@ -33,7 +34,7 @@
       </p -->
     </div>
 
-    <div class="flex-none w-12 h-12 sm:w-20 sm:h-20">
+    <div class="z-10 flex-none w-12 h-12 sm:w-20 sm:h-20">
       <%= if @item.liked do %>
         <button
           phx-click="unlike"
@@ -62,5 +63,5 @@
         </button>
       <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
